# Referral_system

./: .coverage  .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test.postman_collection.json
config/: settings.py  urls.py
users/: authentication.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html  verify.html
